syntax = "proto3";

option csharp_namespace = "AirlineService";

service AirlineEntry {
  rpc AddFlightRoute (FlightRouteRequestModel) returns (DefaultResponse);
  rpc AddFlight (FlightRequestModel) returns (DefaultResponse);
  rpc GetFligths (Empty) returns (FligthsResponse);
  rpc GetFligthsFilter (FligthFilter) returns (FligthsResponse);
  rpc GetRoutes (Empty) returns (RoutesResponse);
  rpc UpdateFligthStatus (ControlTowerRequestModel) returns (DefaultResponse);
}

message Empty {
}

message DefaultResponse {
  string message = 1;
}

// The request message containing the user's name.
message FlightRouteRequestModel {
  string source = 1;
  string target = 2;
  int32 estimatedTime = 3;
  string message = 4;
}

message FlightRequestModel {
  string source = 1;
  string target = 2;
  string aircraft = 3;
  int32 state = 4;
  string message = 5;
}

message FligthsResponse {
  repeated FligthModel fligths = 1;
  string message = 2;
}

message RoutesResponse {
  repeated RouteModel routes = 1;
  string message = 2;
}

message FligthModel {
  string source = 1;
  string target = 2;
  string aircraft = 3;
  string state = 4;
}

message RouteModel {
  string source = 1;
  string target = 2;
}

message FligthFilter {
  string source = 1;
  string target = 2;
  string aircraft = 3;
}

message ControlTowerRequestModel {
  int32 fligthId = 1;
  int32 status = 2;
}
